# web-x

./: .gitignore  CONTRIBUTING.html  README.html  README.md  config.py.template  environment-min.yml  environment-win.yml  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-website.yml
data/: user.py
deployment/: web-x.nginx  web-x.service
services/: clipper.py  cookie_auth.py  featured_data_service.py  featured_service.py  grid_object.py  literal.py  news_service.py  package_service.py  post_service.py  search_service.py  user_service.py
static/: index.html
static/css/: basic.css  example.css  grid.css  index.css  nav.css  sidebar.css  site.css  site.css.new  site.css.org  user.css
templates/: index.html  index.html.org  test_page.html
templates/about/: about-edi.html  data-sustainability.html  edi-advisory-board.html  edi-affiliations.html  edi-policy.html  edi-products.html  edi-public-calendar.html  edi.html  partners-and-affiliations.html  partners.html  policies.html  services.html  team.html
templates/data/: data-services.html  discover.html  example.html  featured-jan-2022.html  featured-mar-2022.html  featured.html  featured_mar_2022.html  find-data.html  publish-data.html  publish.html  services.html  tombstone.html
templates/featured/: featured-20180801.00.html  featured-20180901.00.html  featured-20181001.00.html  featured-dwr.html  (+35 more)
tests/: __init__.py  test_clipper.py
utilities/: build.py  docmap.json.complete  docmap.json.template  errors.txt
viewmodels/: index_viewmodel.py
views/: about.py  data.py  featured.py  home.py  index.py  news.py  resources.py  search.py  support.py  user.py  webinars.py
(+230 files in other folders)
